--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "jqeury": "0.0.1-security",
+    "jquery": "^3.6.0",
+    "sync-request": "^6.1.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
@@ -15,6 +18,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
+    "expose-loader": "^3.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.4.4",
@@ -30,5 +34,6 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "type": "module"
 }
