--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "handlebars": "^4.7.7",
     "jqeury": "0.0.1-security",
     "jquery": "^3.6.0",
     "sync-request": "^6.1.0",
+    "util": "^0.12.4",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
